# jobsync

./: .gitignore  AGENTS.md  CODEX_PROMPTS.md  README.md  docker-compose.yml  start-mobile.sh
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2c84c4b6a53a_add_company_status_history.py  6d1a9e9de4f2_add_forwarding_email_to_users.py  6f9f4a3c1a2b_rename_email_message_id_for_inbound.py  8b17e9a4c2d1_add_time_range_fields_to_schedules.py  bd484ad0b951_initial.py
backend/app/: main.py
backend/app/api/v1/: auth.py  companies.py  emails.py  inbound.py  router.py  schedules.py  users.py
backend/app/core/: config.py  database.py  errors.py  forwarding.py  logger.py  mailgun.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  company.py  email.py  email_connection.py  schedule.py  user.py
backend/app/schemas/: __init__.py  company.py  email.py  schedule.py  user.py
backend/app/services/: __init__.py  email_analyzer.py  gmail_service.py  notification_service.py
backend/app/tasks/: celery_app.py  email_sync_task.py  inbound_email_task.py  reminder_task.py
backend/tests/: conftest.py  test_account_deletion.py  test_api_companies.py  test_api_inbound.py  test_api_schedules.py  test_api_users.py  test_core_mailgun.py  test_email_analyzer.py  test_inbound_webhook.py
backend/tests/services/: test_gmail_service.py  test_notification_service.py
backend/tests/tasks/: test_reminder_task.py
backend/tests/utils/: mailgun_payload.py
docs/: e2e-manual-test.md  firebase-setup.md
mobile/: .gitignore  GoogleService-Info.plist  app.json  babel.config.js  eas.json  expo-env.d.ts  google-services.json  index.js  package-lock.json  package.json  tsconfig.json  withFirebasePodfilePatch.js
mobile/src/api/: auth.ts  (+5 more)
(+33 files in other folders)
